apps/homarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  annotations:
    secret.reloader.stakater.com/reload: "homarr-env"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
        - name: homarr
          image: ghcr.io/homarr-labs/homarr:latest
          ports:
            - name: http
              containerPort: 7575
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              memory: 600Mi
          volumeMounts:
            - name: config
              mountPath: /app/data/config.yml
              subPath: config.yml
      volumes:
        - name: config
          configMap:
            name: mafl-config
