apps/homarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: homarr
spec:
  selector:
    app: homarr
  type: ClusterIP
  ports:
    - name: http
      port: 7575
      targetPort: 7575
