apps/homarr/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - home.starsystem.dev
      secretName: homarr-tls
  rules:
    - host: home.starsystem.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homarr
                port:
                  number: 7575
